# rdmmesh

./: pom.xml
.github/workflows/: ci.yml
bootstrap/sql/optional/: code_item_partitioning.sql
docs/adr/: 0010-workflow-topology-as-data.md
docs/handoff/: E12-ingestion.md  E13-bitemporal.md  E13.2-hierarchy.md  E13.3-cycle-detection.md  E14-compliance.md  E14.14-r9-backlog-ci-gating.md  E14.15-test-debt.md  E14.7-partitioning.md  E14.8-security-review.md  E14.9-testcontainers-it.md  E15-excel-io.md  E16-flowable.md  E16.3-flowable-round3.md  E16.4-topology-as-data-b1.md  E16.5-topology-as-data-b2.md
docs/runbooks/: audit-log-retention.md  code-item-partitioning.md
helm/rdmmesh/: Chart.yaml  README.md  values.yaml
helm/rdmmesh/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  cronjob-audit-archive.yaml  cronjob-ensure-partition.yaml  deployment.yaml  ingress.yaml  service.yaml
om-rdmmesh-source/: .gitignore  README.md  pyproject.toml
om-rdmmesh-source/examples/: README.md  rdmmesh-workflow.yaml
om-rdmmesh-source/src/metadata/ingestion/source/database/rdmmesh/: client.py  connection.py  mapping.py  metadata.py  models.py  service_spec.py
om-rdmmesh-source/tests/: test_client.py  test_mapping_pure.py
rdmmesh-app/: pom.xml
rdmmesh-audit/: pom.xml
rdmmesh-authoring/: pom.xml
rdmmesh-distribution/: pom.xml
rdmmesh-ui/: index.html  tsconfig.app.tsbuildinfo
rdmmesh-ui/src/api/: endpoints.ts  queryClient.ts  types.ts
rdmmesh-ui/src/auth/: Callback.tsx
rdmmesh-ui/src/components/: AddItemModal.tsx  BulkImportModal.tsx  ConsumerViewDrawer.tsx  HierarchyTree.tsx  ItemsTable.tsx  RebuildClosureButton.tsx
rdmmesh-ui/src/i18n/: en.json  ru.json
rdmmesh-ui/src/pages/: VersionPage.tsx
scripts/: seed-demo.sh  smoke-excel-io.sh
(+54 files in other folders)
