[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "om-rdmmesh-source"
version = "0.1.0"
description = "OpenMetadata ingestion source for rdmmesh (Reference Data Management for Mesh)"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "rdmmesh team" }]
keywords = ["openmetadata", "rdmmesh", "ingestion", "data-mesh", "reference-data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.5,<3",
    "requests>=2.31,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<9",
    "pytest-cov>=4.1,<6",
    "responses>=0.25,<1",
    "ruff>=0.5,<1",
    "mypy>=1.8,<2",
]
codegen = [
    "datamodel-code-generator[http]>=0.25,<1",
]

[project.urls]
Homepage = "https://github.com/<org>/rdmmesh"
Documentation = "https://github.com/<org>/rdmmesh/blob/main/docs/handoff/E12-ingestion.md"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["metadata*"]
namespaces = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
